# JartCentre-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  entrypoint.sh  init-services.sh  pyproject.toml  read-config  run-librespot.sh  run-snapclient.sh  supervisord.conf  update.sh
.github/workflows/: build.yml
tests/: conftest.py  test_alsa.py  test_config.py  test_routes.py
webui/: app.py  audio.py  config.py  metrics.py  requirements.txt  snapcast.py
webui/templates/: index.html
