[project]
name = "jartcentre-agent"
version = "1.0.0"
description = "Network audio client and monitoring agent for Raspberry Pi"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
